cabal-version:      3.0
name:               asm
version:            0.1.0.0
synopsis:           The functional meta-assembly framework
-- description:
homepage:           https://github.com/rastertail/asm.hs
license:            MIT
license-file:       LICENSE
author:             Maxwell Beck
maintainer:         max@rastertail.net
-- copyright:
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  ASM
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010
